--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,10 @@
     "noEmit": true,
     "noFallthroughCasesInSwitch": true,
     "jsx": "react",
-    "baseUrl": "./src"
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["*"]
+    }
   },
   "include": ["./src"]
 }
