--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "prettify": "prettier --write",
+    "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts"
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
@@ -20,6 +23,13 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "inquirer": "^8.1.2",
+    "inquirer-directory": "^2.2.0",
+    "node-plop": "^0.26.2",
+    "plop": "^2.7.4",
+    "prettier": "^2.3.2",
+    "shelljs": "^0.8.4",
+    "ts-node": "^10.1.0",
     "typescript": "^4.3.2",
     "vite": "^2.4.4"
   }
