--- a/package.json
+++ b/package.json
@@ -5,8 +5,25 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "serve": "vite preview",
+    "checkTs": "tsc --noEmit",
+    "lint": "yarn run eslint src",
+    "lint:fix": "yarn run eslint --fix src",
+    "lint:css": "stylelint src/**/*.css",
     "prettify": "prettier --write",
     "generate": "cross-env TS_NODE_PROJECT='./internals/ts-node.tsconfig.json' plop --plopfile internals/generators/plopfile.ts"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx}": [
+      "yarn run eslint --fix"
+    ],
+    "*.{md,json}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn run checkTs && lint-staged"
+    }
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -23,8 +40,13 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^7.0.1",
     "inquirer": "^8.1.2",
     "inquirer-directory": "^2.2.0",
+    "lint-staged": "^11.1.1",
     "node-plop": "^0.26.2",
     "plop": "^2.7.4",
     "prettier": "^2.3.2",
