--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "sms-ui",
+  "name": "vite-boilerplate",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
