--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
@@ -36,7 +37,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.8",
+    "@typescript-eslint/eslint-plugin": "^4.28.5",
+    "@typescript-eslint/parser": "^4.28.5",
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "autoprefixer": "^10.3.1",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -46,10 +51,13 @@
     "lint-staged": "^11.1.1",
     "node-plop": "^0.26.2",
     "plop": "^2.7.4",
+    "postcss": "^8.3.6",
     "prettier": "^2.3.2",
     "shelljs": "^0.8.4",
+    "tailwindcss": "^2.2.7",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.2",
-    "vite": "^2.4.4"
+    "vite": "^2.4.4",
+    "vite-plugin-eslint": "^1.3.0"
   }
 }
