--- a/package.json
+++ b/package.json
@@ -26,10 +26,17 @@
     "axios": "^0.21.1",
     "cross-env": "^7.0.3",
     "lodash": "^4.17.21",
+    "mobx": "^6.3.2",
+    "mobx-persist-store": "^1.0.3",
+    "mobx-react": "^7.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0"
+    "react-hook-form": "^7.12.2",
+    "react-icons": "^4.2.0",
+    "react-query": "^3.19.1",
+    "react-router-dom": "^5.2.0",
+    "react-spinner": "^0.2.7"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.171",
